layout of form changed to ensure that the booking form is visible upon page load and you don't need to scroll to see the bottom of the form

--- a/app/assets/stylesheets/components/_container-cards.scss
+++ b/app/assets/stylesheets/components/_container-cards.scss
@@ -70,4 +70,5 @@
   color: white;
   font-size: 22px;
   font-weight: lighter;
+  margin-bottom: 1px;
 }
